modified:   .DS_Store 	modified:   assets/.DS_Store 	new file:   assets/images/PromoImage.jpg 	modified:   assets/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
 <section class="heroSection">
 
-
     <div class="grid-container1">
         <div class="grid-item1"><i class="fa-solid fa-user-astronaut" style=" font-size: 40px; margin-right: 10px;"></i>Zero Gravity Adventures</div>
         <div class="grid-item1"><i class="fa-solid fa-atom" style=" font-size: 40px; margin-right: 10px;"></i>Scientific Expeditions</div>
@@ -67,7 +66,16 @@
         <div class="grid-item1"><i class="fa-solid fa-moon" style=" font-size: 40px; margin-right: 10px;"></i>Lunar Trips</div>
    
     </div>
-   <div class="heroResultsDiv">
+    <div class="promocontainer"> 
+        <div style="width: 500px; padding: 20px;">
+        <h2> <i class="fa-solid fa-wand-magic-sparkles" style="margin-right: 15px;"></i> Let AI Choose your Adventure</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aliquam ad nemo labore sint, voluptas est magni tempora atque obcaecati, molestias facilis nulla expedita iusto eos facere, eligendi dignissimos vel?</p>
+        <br>
+        <button class="buttonDark"> Go </button>
+       </div>
+
+    </div>
+    <div class="heroResultsDiv">
     <div class="grid-container">
         <div class="grid-item">
             <img class="imageitem" src="/assets/images/First.png" alt="">
@@ -162,12 +170,6 @@
 
     </div>
    </div>
-
-   
-
-    
-    
-   
 
 </section>
 
