--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
     <title>Galactic Getaways: Your Next Adventure Awaits!</title>
     <link rel="stylesheet" href="/assets/style.css">
     <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
-   
-    
 </head>
 <body class="bodyMain">
-
+<!-- Finder Section  -->
 <section class="finderSection">
-
+<!-- Finder Nav -->
 <div class="finderNavigation">
 
     <img style="margin-left: -50px;" src="/assets/images/logo.png" alt="">
@@ -22,7 +20,7 @@
     </div>
 
 </div>
-
+<!-- Finder  -->
   <div class="heroFinderDiv">
             <!-- Origin and Destination -->
                 <div id="space-flight-finder">
@@ -56,19 +54,25 @@
         </div>
   </div>
 </section>
-
+<!-- Hero Section  -->
 <section class="heroSection">
 
-    <div class="grid-container1">
-        <div class="grid-item1"><i class="fa-solid fa-user-astronaut" style=" font-size: 40px; margin-right: 10px;"></i>Zero Gravity Adventures</div>
-        <div class="grid-item1"><i class="fa-solid fa-atom" style=" font-size: 40px; margin-right: 10px;"></i>Scientific Expeditions</div>
+    <div class="tripCategories">
+       <a href=""> <div class="grid-item1"><i class="fa-solid fa-user-astronaut" style=" font-size: 40px; margin-right: 10px;"></i>Zero Gravity Adventures</div>
+       </a>
+
+       <a href=""> <div class="grid-item1"><i class="fa-solid fa-atom" style=" font-size: 40px; margin-right: 10px;"></i>Scientific Expeditions</div>
+       </a>
+       <a href="">
         <div class="grid-item1"><i class="fa-solid fa-shuttle-space" style=" font-size: 40px; margin-right: 10px;"></i>Space Cruises</div>
+       </a>
+       <a href="">
         <div class="grid-item1"><i class="fa-solid fa-moon" style=" font-size: 40px; margin-right: 10px;"></i>Lunar Trips</div>
-   
+       </a>
     </div>
     <div class="promocontainer"> 
-        <div style="width: 500px; padding: 20px;">
-        <h2> <i class="fa-solid fa-wand-magic-sparkles" style="margin-right: 15px;"></i> Let AI Choose your Adventure</h2>
+        <div style="width: 500px; padding: 30px;">
+        <h2 style="font-size: 3rem;"> <i class="fa-solid fa-wand-magic-sparkles" style="margin-right: 15px;"></i> Let AI Choose your Adventure</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aliquam ad nemo labore sint, voluptas est magni tempora atque obcaecati, molestias facilis nulla expedita iusto eos facere, eligendi dignissimos vel?</p>
         <br>
         <button class="buttonDark"> Go </button>
@@ -172,7 +176,7 @@
    </div>
 
 </section>
-
+<!-- Footer  -->
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-logo">
@@ -191,7 +195,6 @@
         </div>
     </div>
 </footer>
-
 </body>
 
 </html>
