--- a/index.html
+++ b/index.html
@@ -79,6 +79,112 @@
        </div>
 
     </div>
+
+    <div style="width: 100%; margin-bottom: -40px;">
+        <div style="width: 500px;">
+        <h3 style="text-align: start;">
+            The most popular flights right now
+        </h3>
+        <p>
+            Other travellers are loving these destinations. Search and compare flights, hotels, and car hire and join them on the adventure.
+        </p>
+       </div>
+    </div>
+
+    <div class="tripCategories2">
+
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        <a href=""> 
+            <div class="grid-item2">
+              <img style="border-radius: 10px; width: 50%;
+              height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
+              <div style="text-align: start;">
+              <h4>Scientific Expeditions</h4>
+              <p>4 Days Trip</p>
+              </div>
+            </div>
+        </a>
+        
+     </div>
     <div class="heroResultsDiv">
     <div class="grid-container">
         <div class="grid-item">
