--- a/index.html
+++ b/index.html
@@ -58,16 +58,17 @@
 <section class="heroSection">
 
     <div class="tripCategories">
-       <a href=""> <div class="grid-item1"><i class="fa-solid fa-user-astronaut" style=" font-size: 40px; margin-right: 10px;"></i>Zero Gravity Adventures</div>
+
+       <a href=""> <div class="grid-item1"><i class="fa-solid fa-user-astronaut" style=" font-size: 30px; margin-right: 10px;"></i>Zero Gravity Adventures</div>
+       </a>
+       <a href=""> <div class="grid-item1"><i class="fa-solid fa-atom" style=" font-size: 30px; margin-right: 10px;"></i>Scientific Expeditions</div>
        </a>
 
-       <a href=""> <div class="grid-item1"><i class="fa-solid fa-atom" style=" font-size: 40px; margin-right: 10px;"></i>Scientific Expeditions</div>
+       <a href="">
+        <div class="grid-item1"><i class="fa-solid fa-shuttle-space" style=" font-size: 30px; margin-right: 10px;"></i>Space Cruises</div>
        </a>
        <a href="">
-        <div class="grid-item1"><i class="fa-solid fa-shuttle-space" style=" font-size: 40px; margin-right: 10px;"></i>Space Cruises</div>
-       </a>
-       <a href="">
-        <div class="grid-item1"><i class="fa-solid fa-moon" style=" font-size: 40px; margin-right: 10px;"></i>Lunar Trips</div>
+        <div class="grid-item1"><i class="fa-solid fa-moon" style=" font-size: 30px; margin-right: 10px;"></i>Lunar Trips</div>
        </a>
     </div>
     <div class="promocontainer"> 
@@ -82,7 +83,7 @@
 
     <div style="width: 100%; margin-bottom: -40px;">
         <div style="width: 500px;">
-        <h3 style="text-align: start;">
+        <h3 style="text-align: start; font-size: 2em;">
             The most popular flights right now
         </h3>
         <p>
@@ -98,7 +99,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -108,7 +109,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -118,7 +119,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -128,7 +129,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -138,7 +139,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -148,7 +149,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -158,7 +159,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -168,7 +169,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
@@ -178,7 +179,7 @@
               <img style="border-radius: 10px; width: 50%;
               height: auto; margin-right: 20px;" src="/assets/images/First.png" alt="">
               <div style="text-align: start;">
-              <h4>Scientific Expeditions</h4>
+              <h4 style="margin: 0px 0px 10px; ">Scientific Expeditions</h4>
               <p>4 Days Trip</p>
               </div>
             </div>
